results/SVCOMP/conversational/log-ExSymExe10-2024_03_11_01_28_43.txt
class Main {
  static int field;

  //@ requires x == \symbolic;
  //@ requires z == \symbolic;
  //@ ensures \result == true || \result == false;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires x == \symbolic;
  //@ requires z == \symbolic;
  //@ ensures \result == true || \result == false;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: This backslash token is unknown: \symbolic
  //@ requires x == \symbolic;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: This backslash token is unknown: \symbolic
  //@ requires z == \symbolic;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:16: error: This backslash token is unknown: \symbolic
  //@ requires x == \symbolic;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:17: error: This backslash token is unknown: \symbolic
  //@ requires z == \symbolic;
                    ^
4 errors

class Main {
  static int field;

  //@ requires x is symbolic
  //@ requires z is symbolic
  //@ ensures \result == true || \result == false;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires x is symbolic
  //@ requires z is symbolic
  //@ ensures \result == true || \result == false;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:16: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic
                 ^
2 errors

class Main {
  static int field;

  //@ requires x is symbolic;
  //@ requires z is symbolic;
  //@ ensures \result == true || \result == false;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires x is symbolic;
  //@ requires z is symbolic;
  //@ ensures \result == true || \result == false;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: Incorrectly formed or terminated requires statement near here
  //@ requires z is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:16: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:17: error: Incorrectly formed or terminated requires statement near here
  //@ requires z is symbolic;
                 ^
4 errors

class Main {
  static int field;

  //@ requires \symbolic x;
  //@ requires \symbolic z;
  //@ ensures \result == true || \result == false;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires \symbolic x;
  //@ requires \symbolic z;
  //@ ensures \result == true || \result == false;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic z;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:16: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:17: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic z;
               ^
4 errors

class Main {
  static int field;

  //@ requires x is symbolic;
  //@ requires z is symbolic;
  //@ ensures \result == true || \result == false;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires x is symbolic;
  //@ requires z is symbolic;
  //@ ensures \result == true || \result == false;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: Incorrectly formed or terminated requires statement near here
  //@ requires z is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:16: error: Incorrectly formed or terminated requires statement near here
  //@ requires x is symbolic;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:17: error: Incorrectly formed or terminated requires statement near here
  //@ requires z is symbolic;
                 ^
4 errors

